# rfb

./: .gitignore  Dockerfile  README.md  docker-compose.overrride.yml  pyproject.toml  requirements.txt  scrapy.cfg
.astro/: config.yaml
.github/workflows/: dbt_ci.yaml
dags/ingestion/: ingst_rfb_data.py
dags/transformation/: transform_gov_data.py
jobs/: job_cnae_transient_data_to_bronze.ipynb  job_empresa_transient_data_to_bronze.ipynb  job_estabelecimento_transient_data_to_bronze.ipynb  job_ibge_transient_data_to_bronze.ipynb  job_municipios_rfb_transient_data_to_bronze.ipynb  readme.md
quality/: dq_cnae_bronze.ipynb  dq_empresa_bronze.ipynb  dq_estabelecimento_bronze.ipynb  dq_municipio_pib_bronze.ipynb  dq_municipios_rfb_bronze.ipynb
rfb_crawler/: items.py  middlewares.py  pipelines.py  settings.py
rfb_crawler/spiders/: rfb_spider.py
src/dbt/: dbt_project.yml
src/dbt/models/marts/core/: _mart_core.yml
src/dbt/models/marts/core/dim/: dim_calendario.sql  dim_cnae.sql  dim_empresa.sql  dim_estabelecimento.sql  dim_municipio.sql
src/dbt/models/marts/core/fact/: fact_cadastro_estabelecimento.sql
src/dbt/models/staging/: _sources.yml  stg_cnae.sql  stg_empresa.sql  stg_estabelecimento.sql  stg_municipio_pib.sql  stg_municipios_rfb.sql
src/dbt/tests/: assert_cnpj_is_not_null.sql  assert_cod_ibge_not_null.sql  assert_pib_is_not_zero_or_null.sql
src/ingestion/: download_rfb_data.py  municipios_rfb.py  read_ibge_data.py  send_data_to_remote.py
src/ingestion/dto/: rfb_files_dto.py
src/transformation/: dbt_project.yml
